workloads/medium-place/teslamate/grafana/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: teslamate-grafana
  namespace: medium-place
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: teslamate
    app.kubernetes.io/version: 1.27.1

spec:
  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: teslamate

  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: teslamate
        app.kubernetes.io/version: 1.27.1

    spec:
      securityContext:
        fsGroup: 472

      containers:
        - name: grafana
          image: teslamate/grafana:1.27.1

          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana

          ports:
            - name: http
              protocol: TCP
              containerPort: 3000

  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: medium-place

      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 512Mi
