workloads/medium-place/teslamate/grafana/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: teslamate-grafana
  namespace: medium-place
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: teslamate
    app.kubernetes.io/version: 1.27.0

spec:
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: teslamate

  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
