workloads/medium-place/teslamate/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: teslamate-grafana
  namespace: medium-place
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: nutria.tail9b5a.ts.net
  labels:
    app.kubernetes.io/part-of: teslamate-grafana

spec:
  ingressClassName: private

  tls:
    - hosts:
        - garage.medium.place
      secretName: garage.medium.place-tls

  rules:
    - host: garage.medium.place
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: teslamate-grafana
                port:
                  name: http
